--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "http-proxy-middleware": "1.0.5",
+    "axios": "0.20.0"
   },
   "devDependencies": {
     "grunt": "^1.3.0"
